--- a/problem1-stat154.Rmd
+++ b/problem1-stat154.Rmd
@@ -45,25 +45,25 @@ a. X+Y
 b. X+W
 
 ```{r}
-X+W
+print(X+W)
 ```
 
 c. X−I
 
 ```{r}
-X-I
+print(X-I)
 ```
 
 d. XY
 
 ```{r}
-X%*%Y
+print(X%*%Y)
 ```
 
 e. XI
 
 ```{r}
-X%*%I
+print(X%*%I)
 ```
 
 f. X+(Y+Z) 
@@ -116,7 +116,7 @@ inner_product<-function(v,u) {
 }
 v<-c(1,3,5)
 u<-c(1,2,3)
-inner_product(v,u)
+print(inner_product(v,u))
 ```
 
 6.2 Function projection() (10 pts)
@@ -126,7 +126,7 @@ projection<-function(v,u) {
   res<-inner_product(u,v)/inner_product(u,u)*u;
   return(res);
 }
-projection(v,u)
+print(projection(v,u))
 ```
 
 Problem 7 (10 pts)
@@ -160,34 +160,38 @@ Problem 9 (10 pts)
 
 Use your function lp_norm() with the following vectors and values for p: 
 a. zero <- rep(0, 10)andp = 1
-b. ones <- rep(1, 5)andp = 2
-c. u <- rep(0.4472136, 5) and p = 2
-d. u <- 1:500andp = 100
-e. u <- 1:500 and p = "max"
 
 ```{r}
 zero <- rep(0, 10)
 p<-1
-lp_norm(zero,p)
+print(lp_norm(zero,p))
 ```
+
+b. ones <- rep(1, 5)andp = 2
 
 ```{r}
 ones <- rep(1, 5)
-lp_norm(ones,p=2)
+print(lp_norm(ones,p=2))
 ```
+
+c. u <- rep(0.4472136, 5) and p = 2
 
 ```{r}
 u <- rep(0.4472136, 5)
-lp_norm(u,p=2)
+print(lp_norm(u,p=2))
 ```
+
+d. u <- 1:500andp = 100
 
 ```{r}
 u <- 1:500
-lp_norm(u,p=100)
+print(lp_norm(u,p=100))
 ```
 
+e. u <- 1:500 and p = "max"
+
 ```{r}
-lp_norm(u,p="max")
+print(lp_norm(u,p="max"))
 ```
 
 Problem 10 (10 pts)
@@ -213,7 +217,7 @@ b. Create a diagonal matrix D = 1/n I where I is the n × n identity matrix. Dis
 ```{r}
 I<-diag(x=1,nrow=n,ncol=n)
 D<-(1/n)*I
-sum(diag(D))
+print(sum(diag(D)))
 ```
 c. Compute the vector of column means g = XTD1 where 1 is a vector of 1’s of length n.
 Display (i.e. print) g.
@@ -226,7 +230,7 @@ d. Calculate the mean-centered matrix Xc = X−1gT. Display the output of
 colMeans(Xc).
 ```{r}
 Xc<-X-(L%*%t(g))
-colMeans(Xc)
+print(colMeans(Xc))
 ```
 
 e. Compute the (population) variance-covariance matrix V = XTDX − ggT. Display the
